--- a/package.json
+++ b/package.json
@@ -15,14 +15,18 @@
     "expo": "~53.0.20",
     "expo-barcode-scanner": "^13.0.1",
     "expo-camera": "~16.1.11",
+    "expo-file-system": "~18.1.11",
     "expo-linear-gradient": "~14.1.5",
     "expo-location": "~18.1.6",
+    "expo-notifications": "~0.31.4",
+    "expo-print": "~14.1.4",
+    "expo-sharing": "~13.1.5",
     "expo-status-bar": "~2.2.3",
     "firebase": "^12.0.0",
     "haversine": "^1.1.1",
     "react": "19.0.0",
     "react-native": "0.79.5",
-    "expo-notifications": "~0.31.4"
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
