--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/stack": "^7.4.2",
     "expo": "~53.0.20",
     "expo-camera": "~16.1.11",
+    "expo-dev-client": "~5.2.4",
     "expo-file-system": "~18.1.11",
     "expo-linear-gradient": "~14.1.5",
     "expo-location": "~18.1.6",
